Modify Json Time Format MarkDown